--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
-Hi this is Solopie!
+<html>
 
-Playing around with Github Pages :)
 
-Domain: MQ-Student-Jesse-Nguyen.github.io
+</html>
+
+<!DOCTYPE html>
+<html>
+    <body>
+
+        <h1>Welcome to Solopie's Github Page!</h1>
+
+        <pre>
+        Hi this is Solopie!
+        
+        Playing around with Github Pages :)
+        
+        Domain: MQ-Student-Jesse-Nguyen.github.io
+        </pre>
+
+
+
+    </body>
+</html>
+
